# sphinx-spladex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: release-check.sh
src/spladex/: __init__.py  encoder.py  extension.py
src/spladex/static/: model_semantic_search.js
src/static/: model_semantic_search.js
tests/: test_bm25.py  test_encoder.py  test_rrf.py  test_sphinx_build.py  test_static_query_assets.py
