[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-spladex"
version = "0.1.0"
description = "Static hybrid SPLADE and BM25 search for Sphinx documentation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arvind", email = "arvindajaybharadwaj23@gmail.com" }]
classifiers = [
  "Framework :: Sphinx :: Extension",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "sphinx>=7",
  "torch>=2.1",
  "transformers>=4.40",
  "huggingface-hub>=0.22",
]

[project.optional-dependencies]
test = ["pytest>=8"]
dev = [
  "pytest>=8",
  "build>=1.2",
  "twine>=5",
]

[project.entry-points."sphinx.extensions"]
spladex = "spladex"

[tool.hatch.build.targets.wheel]
packages = ["src/spladex"]

[tool.hatch.build]
include = ["src/spladex/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: runs a real Sphinx build and downloads/loads the model",
]
