[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-spladex"
version = "0.1.0"
description = "Static hybrid SPLADE and BM25 search for Sphinx documentation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Arvind", email = "arvindajaybharadwaj23@gmail.com" },
  { name = "Akshat Sharma", email = "akshatomega@gmail.com" },
]
classifiers = [
  "Framework :: Sphinx :: Extension",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]
dependencies = [
  "sphinx>=7",
  "torch>=2.1",
  "transformers>=4.40",
  "huggingface-hub>=0.22",
]

[project.urls]
Homepage = "https://github.com/arvindajaybharadwaj/sphinx-spladex"
Repository = "https://github.com/arvindajaybharadwaj/sphinx-spladex"

[project.optional-dependencies]
test = ["pytest>=8"]
dev = [
  "pytest>=8",
  "build>=1.2",
  "twine>=5",
]

[project.entry-points."sphinx.extensions"]
spladex = "spladex"

[tool.hatch.build.targets.wheel]
packages = ["src/spladex"]

[tool.hatch.build]
include = ["src/spladex/static/*.js", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: runs a real Sphinx build and downloads/loads the model",
]
